new implemented CMakelists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,15 @@
 cmake_minimum_required(VERSION 3.10)
-project(template)
+project(template) 
 include(CTest)
 
 set(CMAKE_CXX_STANDARD 14)
 
 # static checks
-# if(MSVC)
-#   add_compile_options(/W4 /WX)
-# else()
-#   add_compile_options(-Wall -Wextra -pedantic -Werror)
-# endif()
+if(MSVC)
+  add_compile_options(/W4 /WX)
+else()
+  add_compile_options(-Wall -Wextra -pedantic)
+endif()
 
 # set(CMAKE_CXX_CLANG_TIDY
 #   clang-tidy;
